--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tsunami Sam</title>
-    <link rel="stylesheet" text="text/css" href="css/styles.css">
+    <link rel="stylesheet" text="text/css" href="styles.css">
     <link rel="icon" href="favicon wave1.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   </head>
