--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="skill-row">
           <img class="skill-image2" src="images/coding.png" alt="coding-img">
           <h3>Languages</h3>
-          <p>HTML, CSS, Bootstrap, JavaScript</p>
+          <p>HTML, CSS, Bootstrap, JavaScript, jQuery, Node, SQL, MongoDB, Mongoose, React</p>
         </div>
       </div>
       <hr class="hr2">
