--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img class="Tsunami2" src="images/tsunami2.png" alt="Tsunami2-gif">
         <h3>Savy your surf and stay afloat!</h3>
         <p class="Contact-message">UI, UX, Who's next?!</p>
-        <a class="btn" href="mailto:Tsunamisam99@gmail.com">Message Us (in a bottle)</a>
+        <a class="btn" href="mailto:Tsunamisam99@gmail.com">Message Us</a>
       </div>
     </div>
 
