--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="skill-row">
           <img class="skill-image1" src="images/illustration.png" alt="illustration-img">
           <h3>Web Design and Development</h3>
-          <p>We have been learning code and applying our experience to real-world solutions</p>
+          <p>We design and execute digital platforms that apply to real-world solutions</p>
         </div>
         <div class="skill-row">
           <img class="skill-image2" src="images/coding.png" alt="coding-img">
